@@ -8,6 +8,7 @@ import { UploadResult } from 'tinymce/core/api/EditorUpload';
 import Env from 'tinymce/core/api/Env';
 import { BlobInfo } from 'tinymce/core/api/file/BlobCache';
 import Delay from 'tinymce/core/api/util/Delay';
+import { EditorEvent } from 'tinymce/core/api/util/EventDispatcher';
 import Promise from 'tinymce/core/api/util/Promise';
 import * as Conversions from 'tinymce/core/file/Conversions';
 import Theme from 'tinymce/themes/silver/Theme';
@@ -22,12 +23,17 @@ UnitTest.asynctest('browser.tinymce.core.EditorUploadTest', (success, failure) =
     return;
   }
 
+  let changeEvents = [];
+  const appendEvent = (event: EditorEvent<{}>) => changeEvents.push(event);
+  const clearEvents = () => changeEvents = [];
+
   const teardown = (editor: Editor) =>
     Step.sync(() => {
       editor.editorUpload.destroy();
       editor.settings.automatic_uploads = false;
       delete editor.settings.images_replace_blob_uris;
       dataImgFilter = undefined;
+      clearEvents();
     });
 
   const appendTeardown = (editor: Editor, steps: Step<any, any>[]) =>
@@ -37,6 +43,9 @@ UnitTest.asynctest('browser.tinymce.core.EditorUploadTest', (success, failure) =
 
   const imageHtml = (uri: string) =>
     DOMUtils.DOM.createHTML('img', { src: uri });
+
+  const assertEventsLength = (length: number) =>
+    Assert.eq('Correct events length', length, changeEvents.length);
 
   const assertResult = (editor: Editor, title: string, uploadUri: string, uploadedBlobInfo: BlobInfo, result: UploadResult[]) => {
     const firstResult = result[0];
@@ -85,7 +94,9 @@ UnitTest.asynctest('browser.tinymce.core.EditorUploadTest', (success, failure) =
     editor._scanForImages().then((result) => {
       const blobUri = result[0].blobInfo.blobUri();
 
+      assertEventsLength(0);
       return editor.uploadImages(() => {
+        assertEventsLength(1);
         editor.setContent(imageHtml(blobUri));
         Assert.eq('replace uploaded blob uri with result uri (copy/paste of an uploaded blob uri)', false, hasBlobAsSource(editor.$('img')[0]));
         Assert.eq('replace uploaded blob uri with result uri (copy/paste of an uploaded blob uri)', '<p><img src="file.png" /></p>', editor.getContent());
@@ -104,7 +115,9 @@ UnitTest.asynctest('browser.tinymce.core.EditorUploadTest', (success, failure) =
     editor._scanForImages().then((result) => {
       const blobUri = result[0].blobInfo.blobUri();
 
+      assertEventsLength(0);
       return editor.uploadImages(() => {
+        assertEventsLength(1);
         editor.setContent(imageHtml(blobUri));
         Assert.eq('Has blob', true, hasBlobAsSource(editor.$('img')[0]));
         Assert.eq('contains image', '<p><img src="file.png" /></p>', editor.getContent());
@@ -123,8 +136,10 @@ UnitTest.asynctest('browser.tinymce.core.EditorUploadTest', (success, failure) =
       success(uploadUri);
     };
 
+    assertEventsLength(0);
     editor.uploadImages((result) => {
       assertResult(editor, 'Upload the images', uploadUri, uploadedBlobInfo, result);
+      assertEventsLength(1);
     }).then(() => editor.uploadImages((result) => {
       Assert.eq('Upload the images', 0, result.length);
     })).then(done, die);
@@ -141,8 +156,10 @@ UnitTest.asynctest('browser.tinymce.core.EditorUploadTest', (success, failure) =
       success(uploadUri);
     };
 
+    assertEventsLength(0);
     editor.uploadImages().then((result) => {
       assertResult(editor, 'Upload the images', uploadUri, uploadedBlobInfo, result);
+      assertEventsLength(1);
     }).then(() => {
       uploadedBlobInfo = null;
 
@@ -172,8 +189,10 @@ UnitTest.asynctest('browser.tinymce.core.EditorUploadTest', (success, failure) =
       success(data.id() + '.png');
     };
 
+    assertEventsLength(0);
     editor.uploadImages(assertResultRetainsUrl).then(assertResultRetainsUrl).then(() => {
       uploadedBlobInfo = null;
+      assertEventsLength(1);
 
       return editor.uploadImages(() => {}).then((result) => {
         Assert.eq('uploadImages retain blob urls after upload', 0, result.length);
@@ -201,11 +220,13 @@ UnitTest.asynctest('browser.tinymce.core.EditorUploadTest', (success, failure) =
       return result;
     };
 
+    assertEventsLength(0);
     editor.uploadImages((result) => {
       assertResultReusesFilename(editor, uploadedBlobInfo, result);
 
       editor.uploadImages((_result) => {
         const img = editor.$<HTMLImageElement>('img')[0];
+        assertEventsLength(1);
         Assert.eq('uploadImages reuse filename', false, hasBlobAsSource(img));
         Assert.eq('Check the cache invalidation string was added', true, img.src.indexOf('custom.png?size=small&') !== -1);
         Assert.eq('uploadImages reuse filename', '<p><img src="custom.png?size=small" /></p>', editor.getContent());
@@ -219,6 +240,7 @@ UnitTest.asynctest('browser.tinymce.core.EditorUploadTest', (success, failure) =
 
     const uploadDone = (result) => {
       callCount++;
+      assertEventsLength(callCount);
 
       if (callCount === 2) {
         Assert.eq('Should only be one upload.', 1, uploadCount);
@@ -239,6 +261,7 @@ UnitTest.asynctest('browser.tinymce.core.EditorUploadTest', (success, failure) =
       }, 0);
     };
 
+    assertEventsLength(0);
     Promise.all([
       editor.uploadImages(uploadDone),
       editor.uploadImages(uploadDone)
@@ -250,6 +273,7 @@ UnitTest.asynctest('browser.tinymce.core.EditorUploadTest', (success, failure) =
 
     const uploadDone = (result: UploadResult[]) => {
       callCount++;
+      assertEventsLength(callCount);
 
       if (callCount === 2) {
         // This is in exact since the status of the image can be pending or failed meaning it should try again
@@ -271,6 +295,7 @@ UnitTest.asynctest('browser.tinymce.core.EditorUploadTest', (success, failure) =
       }, 0);
     };
 
+    assertEventsLength(0);
     Promise.all([
       editor.uploadImages(uploadDone),
       editor.uploadImages(uploadDone)
@@ -285,6 +310,9 @@ UnitTest.asynctest('browser.tinymce.core.EditorUploadTest', (success, failure) =
       callCount++;
 
       if (callCount === 2) {
+        // Note: This is 3 as the removal of the image also triggers the addition of an undo level and a change event
+        assertEventsLength(3);
+
         // This is in exact since the status of the image can be pending or failed meaning it should try again
         Assert.eq('Should at least be one.', uploadCount >= 1, true);
       }
@@ -306,6 +334,7 @@ UnitTest.asynctest('browser.tinymce.core.EditorUploadTest', (success, failure) =
       }, 0);
     };
 
+    assertEventsLength(0);
     Promise.all([
       editor.uploadImages(uploadDone),
       editor.uploadImages(uploadDone)
@@ -315,7 +344,9 @@ UnitTest.asynctest('browser.tinymce.core.EditorUploadTest', (success, failure) =
   const sDoNotUploadTransparentImage = (editor: Editor) => Log.step('TBA', `Don't upload transparent image`, Step.async((done, die) => {
     let uploadCount = 0;
 
+    assertEventsLength(0);
     const uploadDone = () => {
+      assertEventsLength(0);
       Assert.eq('Should not upload.', 0, uploadCount);
     };
 
@@ -332,7 +363,9 @@ UnitTest.asynctest('browser.tinymce.core.EditorUploadTest', (success, failure) =
   const sDoNotUploadBogusImage = (editor: Editor) => Log.step('TBA', `Don't upload bogus image`, Step.async((done, die) => {
     let uploadCount = 0;
 
+    assertEventsLength(0);
     const uploadDone = () => {
+      assertEventsLength(0);
       Assert.eq('Should not upload.', 0, uploadCount);
     };
 
@@ -349,7 +382,9 @@ UnitTest.asynctest('browser.tinymce.core.EditorUploadTest', (success, failure) =
   const sDoNotUploadFilteredImage = (editor: Editor) => Log.step('TBA', `Don't upload filtered image`, Step.async((done, die) => {
     let uploadCount = 0;
 
+    assertEventsLength(0);
     const uploadDone = () => {
+      assertEventsLength(0);
       Assert.eq('Should not upload.', 0, uploadCount);
     };
 
@@ -368,7 +403,9 @@ UnitTest.asynctest('browser.tinymce.core.EditorUploadTest', (success, failure) =
   const sDoNotUploadApiFilteredImage = (editor: Editor) => Log.step('TBA', `Don't upload api filtered image`, Step.async((done, die) => {
     let uploadCount = 0, filterCount = 0;
 
+    assertEventsLength(0);
     const uploadDone = () => {
+      assertEventsLength(0);
       Assert.eq('Should not upload.', 0, uploadCount);
       Assert.eq('Should have filtered one item.', 1, filterCount);
     };
@@ -440,6 +477,7 @@ UnitTest.asynctest('browser.tinymce.core.EditorUploadTest', (success, failure) =
     entities: 'raw',
     indent: false,
     base_url: '/project/tinymce/js/tinymce',
-    images_dataimg_filter: (img) => dataImgFilter ? dataImgFilter(img) : true
+    images_dataimg_filter: (img) => dataImgFilter ? dataImgFilter(img) : true,
+    setup: (ed: Editor) => ed.on('change', appendEvent)
   }, success, failure);
 });
