@@ -4,4 +4,5 @@
 agar@5.1.0
 mcagar@5.1.0
 alloy@8.1.0
+katamari@7.1.0
 snooker@7.1.0
