@@ -12,6 +12,7 @@ Version 5.6.0 (TBD)
     Added new `emoticons_database` setting to configure which emoji database to use #TINY-6021
     Added new `name` field to the `style_formats` setting object to enable specifying a name for the format. #TINY-4239
     Changed `readonly` mode to allow hyperlinks to be clickable #TINY-6248
+    Fixed the `change` event not fired after a successful image upload #TINY-6586
     Fixed the type signature for the `entity_encoding` setting not accepting delimited lists #TINY-6648
     Fixed layout issues when empty `tr` elements were incorrectly removed from tables #TINY-4679
     Fixed image file extensions lost when uploading an image with an alternative extension (e.g. jfif) #TINY-6622
